# 2D-computer-graphics-app

./: CMakeLists.txt  README.md  build_x64_ninja.bat
cmake/: packages.cmake  settings.cmake  sources.cmake
headers/: main.hpp
include/: application.hpp
src/: application.cpp  main.cpp
